--- a/sam.html
+++ b/sam.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Second github Repository</title>
+    <link rel="stylesheet" href="styles/sam.css">
 </head>
 <body>
     <h1>Hello World I'm Samian Wazed</h1>
+    <div>
+        <h3>Hello after many days I have seen the sunlight</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos eveniet aliquam ipsam enim voluptates libero voluptatem nulla earum quo exercitationem! Illo ipsam saepe ex est velit rem sit libero beatae.</p>
+    </div>
+    <h3>This is my worklist of 4 January</h3>
+    <ul>
+        <li>Driving</li>
+        <li>Eating</li>
+        <li>Walking</li>
+        <li>Sleeping</li>
+        <li>Coding</li>
+    </ul>
 </body>
 </html>
